--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face{
+    font-family: Poppins;
+    src: url('assets/fonts/Poppins-Regular.ttf');
+}
+
+
+*{
+    margin: 0;
+}
+
+body{
+    font-family: 'Poppins', sans-serif;
+    background: rgb(20, 29, 47);
+    color: white;
+}
+
+.d-none{
+    display: none;
+}
