--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -1,14 +1,23 @@
-<div class="atf-frame" id="atf">
+<div  id="atf">
+
+</div>
+<div class="atf-frame">
     <div class="image-container">
         <img src="/assets/img/ich.png" alt="foto of myself">
         <img class="photo-shadow" src="/assets/img/photo-shadows.png" alt="shadow">
         <div class="bottomOfAtf">
             <div class="icon-container">
                 <div class="line"></div>
-                <img src="/assets/img/github-button.png" alt="Github button">
-                <img src="/assets/img/mail-button.png" alt="Mail button">
-                <img src="/assets/img/linkedin-button.png" alt="Linkedin button">
+                <a href="https://github.com/steffenjoachim/" target="_blank">
+                    <img src="/assets/img/github-button.png" alt="Github button"></a>
+                <a href="#contact">
+                    <img src="/assets/img/mail-button.png" alt="Mail button"></a>
+                <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
+                    <img src="/assets/img/linkedin-button.png" alt="Linkedin button">
+                </a>
+                <a href="#contact" class="sjs-mail">
                 <span>steffenjoachim.schanze@gmail.com</span>
+                </a>
             </div>
             <div>
                 <span class="scrollDowm"> Scroll down -></span>
@@ -27,6 +36,6 @@
             </div>
         </div>
     </div>
-    
+
 </div>
 <img class="background-shape" src="/assets/img/background-shape.png">
