--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact-frame">
+<div class="contact-frame" id="contact">
     <div class="contact-left">
         <div class="contact-headline">
             <div class="line"></div>
@@ -9,16 +9,17 @@
         <span>Contact me through this form, I am interested in hearing from you, knowing your ideas and contributing to
             your projects with my work</span>
         <br><br>
-        <span>Need a Frontend developer? <b>Contact me!</b></span>
+        <span>Need a Frontend developer? <b>Contact me!</b></span> 
     </div>
     <div class="contact-right">
         <div class="contact-form">
-            <form action="">
-                <input type="text" placeholder="Your name" required>
-                <input type="text" placeholder="Your email" required>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your message" required></textarea>
+            <form (submit)="sendMail()" ngNativeValidate #myForm>
+                <input type="text" placeholder="Your name" required name="name" #nameField>
+                <input type="text" placeholder="Your email" required name="email" #emailField>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your message" required name="message" #messageField></textarea>
+                <button #sendButton>Send a message :)</button>
             </form>
-            <button>Send a message :)</button>
+            
         </div>
     </div>
 </div>
