--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -24,6 +24,7 @@
         border-radius: 5px;
         padding: 12px;
         width: 400px;
+        color: white;
         &::placeholder{
             color: white;
         }
