--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -6,7 +6,7 @@
 <div class="sample">
     <span>This page is a sample of my work - please feel free to try them out.</span>
 </div>
-<!-- <div class="project-frame">
+<div class="project-frame">
     <div class="image-container">
         <img src="/assets/img/join.png" alt="laptop showing join project">
     </div>
@@ -38,9 +38,9 @@
     <div class="image-container el-pollo-loco">
         <img src="/assets/img/El_Pollo_Loco.png" alt="laptop showing El-Pollo-loco game">
     </div>
-</div> -->
-<div>
-    <app-project *ngFor="let project of projects" [project]="project"></app-project>
 </div>
-<img class="purple-shadow2" src="/assets/img/purple-shadow2.png" alt="shadow">
+<!-- <div>
+    <app-project *ngFor="let project of projects" [project]="project"></app-project>
+</div> -->
+<img class="purple-shadow2" src="/assets/img/purple-shadow.png" alt="shadow">
 <img class="green-shadow2" src="/assets/img/green-shadow2.png" alt="shadow">
