--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,43 +1,43 @@
 <div class="my-skills-frame" id="my-skills">
     <div class="skills-container">
         <div class="icon-container">
-            <img src="/assets/img/Angular.png" alt="Angular icon">
+            <img class="skill-img" src="/assets/img/Angular.png" alt="Angular icon">
             <span>Angular</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/Typescript.png" alt="TypeScript icon">
+            <img class="skill-img" src="/assets/img/Typescript.png" alt="TypeScript icon">
             <span>TypeScript</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/Javascript.png" alt="JavaScript icon">
+            <img class="skill-img" src="/assets/img/Javascript.png" alt="JavaScript icon">
             <span>JavaScript</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/html.png" alt="HTML icon">
+            <img class="skill-img" src="/assets/img/html.png" alt="HTML icon">
             <span>HTML</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/Firebase.png" alt="Firebase icon">
+            <img class="skill-img" src="/assets/img/Firebase.png" alt="Firebase icon">
             <span>Firebase</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/git.png" alt="GIT icon">
+            <img class="skill-img" src="/assets/img/git.png" alt="GIT icon">
             <span>GIT</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/css.png" alt="CSS icon">
+            <img class="skill-img" src="/assets/img/css.png" alt="CSS icon">
             <span>CSS</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/Api.png" alt="Rest-Api icon">
+            <img class="skill-img" src="/assets/img/Api.png" alt="Rest-Api icon">
             <span>Rest-Api</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/scrum.png" alt="Scrum icon">
+            <img class="skill-img" src="/assets/img/scrum.png" alt="Scrum icon">
             <span>Scrum</span>
         </div>
         <div class="icon-container">
-            <img src="/assets/img/MD.png" alt="Material Design">
+            <img class="skill-img" src="/assets/img/MD.png" alt="Material Design">
             <span class="md">Material Design</span>
         </div>
     </div>
@@ -50,7 +50,9 @@
         <span>I built landing pages and several web apps, as well as OOP-based Jump-and-Run-Games with the respective
             technologies you find listed alongside.
         </span>
-        <button>Get in touch</button>
+        <a href="#contact">
+            <button>Get in touch</button>
+        </a>
     </div>
 </div>
 <img class="green-shadow" src="/assets/img/green-shadow2.png" alt="shadow">
