--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -3,8 +3,8 @@
     display: flex;
 
     img{
-        height: 32px;
-        width: 32px;
+        height: 48px;
+        width: 48px;
     }
 
     h1{
@@ -43,8 +43,8 @@
     align-items: center;
     justify-content: center;
     border: 1px solid transparent;
-    width: 120px;
-    height: 100px;
+    width: 150px;
+    height: 120px;
 }
 
 .my-skills-container{
@@ -80,3 +80,23 @@
     left: 0;
     z-index: -1;
 }
+
+.skill-img{
+    &:hover{
+        animation: shake 0.5s;
+    }
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
