--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,4 +1,4 @@
-<div class="project-frame </div>">
+<div class="project-frame">
     <div class="project-container">
         <h3>{{ project.name }} </h3>
         <h4> {{ project.skills }}</h4>
