--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body{
     font-family: 'Poppins', sans-serif;
     background: rgb(20, 29, 47);
     color: white;
+    max-width: 100%;
 }
 
 .d-none{
