--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-frame" id="about-me">
+<div class="about-me-frame">
     <div class="about-me-left">
         <h1>About me</h1>
         <div class="about-me-text">
@@ -18,7 +18,7 @@
                     employer, because his success is a condition for my success.
                 </p>
             </div>
-            <div class="puzzle-container">
+            <div class="puzzle-container" id="my-skills">
                 <img src="/assets/img/puzzle.svg" alt="bulb icon">
                 <p>I have alway motivated myself to learn new things, to break new grounds, to overcome difficulties and
                     to
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="about-me-right">
-        <img src="/assets/img/ich.png" alt="picture of myself">
+        <img src="/assets/img/ich2.png" alt="picture of myself">
         <div class="line"></div>
     </div>
 </div>
