--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -1,41 +1,45 @@
-<div  id="atf">
+<div id="atf">
 
 </div>
 <div class="atf-frame">
-    <div class="image-container">
-        <img src="/assets/img/ich.png" alt="foto of myself">
-        <img class="photo-shadow" src="/assets/img/photo-shadows.png" alt="shadow">
-        <div class="bottomOfAtf">
-            <div class="icon-container">
-                <div class="line"></div>
-                <a href="https://github.com/steffenjoachim/" target="_blank">
-                    <img src="/assets/img/github-button.png" alt="Github button"></a>
-                <a href="#contact">
-                    <img src="/assets/img/mail-button.png" alt="Mail button"></a>
-                <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
-                    <img src="/assets/img/linkedin-button.png" alt="Linkedin button">
-                </a>
-                <a href="#contact" class="sjs-mail">
-                <span>steffenjoachim.schanze@gmail.com</span>
-                </a>
-            </div>
-            <div>
-                <span class="scrollDowm"> Scroll down -></span>
+    <div class="topOfAtf">
+        <div class="image-container">
+            <img class="myself" src="/assets/img/ich.png" alt="foto of myself">
+            <img class="photo-shadow" src="/assets/img/photo-shadows.png" alt="shadow">
+        </div>
+        <div class="iAm-frame">
+            <div class="iAm-container">
+                <div class="iAmDiv">
+                    <span class="iAm">I am</span>
+                </div>
+                <div class="steffenFrontend">
+                    <h1>Steffen Schanze</h1>
+                    <h3>FRONTEND DEVELOPER</h3>
+                    <a href="#contact">
+                        <button>Let's talk!</button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="iAm-frame">
-        <div class="iAm-container">
-            <div class="iAmDiv">
-                <span class="iAm">I am</span>
-            </div>
-            <div class="steffenFrontend">
-                <h1>Steffen Schanze</h1>
-                <h3>FRONTEND DEVELOPER</h3>
-                <button>Let's talk!</button>
-            </div>
+    <div class="bottomOfAtf">
+        <div class="icon-container">
+            <div class="line"></div>
+            <a href="https://github.com/steffenjoachim/" target="_blank">
+                <img src="/assets/img/github-button.png" alt="Github button"></a>
+            <a href="#contact">
+                <img src="/assets/img/mail-button.png" alt="Mail button"></a>
+            <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
+                <img src="/assets/img/linkedin-button.png" alt="Linkedin button">
+            </a>
+            <a href="#contact" class="sjs-mail">
+                <span class="email-address">steffenjoachim.schanze@gmail.com</span>
+            </a>
+        </div>
+        <div class="scroll-down-container">
+            <span id="about-me" class="scrollDown"> Scroll down -></span>
         </div>
     </div>
-
 </div>
+
 <img class="background-shape" src="/assets/img/background-shape.png">
