--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,12 @@
     </div>
     <span>© Steffen Schanze 2023</span>
     <div class="icon-container">
-        <img class="icon" src="/assets/img/github-button.png" alt="Github button">
-        <img class="icon" src="/assets/img/mail-button.png" alt="Mail button">
-        <img class="icon" src="/assets/img/linkedin-button.png" alt="Linkedin button">
+        <a href="https://github.com/steffenjoachim/" target="_blank">
+            <img class="icon" src="/assets/img/github-button.png" alt="Github button"></a>
+        <a href="mailto:steffenjoachim.schanze@gmail.com">
+            <img class="icon" src="/assets/img/mail-button.png" alt="Mail button"></a>
+        <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
+            <img class="icon" src="/assets/img/linkedin-button.png" alt="Linkedin button">
+        </a>
     </div>
 </div>
