--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,4 +1,4 @@
-<div class="my-skills-frame" id="my-skills">
+<div class="my-skills-frame">
     <div class="skills-container">
         <div class="icon-container">
             <img class="skill-img" src="/assets/img/Angular.png" alt="Angular icon">
@@ -51,7 +51,7 @@
             technologies you find listed alongside.
         </span>
         <a href="#contact">
-            <button>Get in touch</button>
+            <button id="portfolio">Get in touch</button>
         </a>
     </div>
 </div>
