--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,7 +1,9 @@
 .about-me-frame{
+    position: relative;
     display: flex;
     align-items: center;
     margin-bottom: 120px;
+    z-index: 9;
 }
 
 
@@ -53,4 +55,21 @@ h1{
     right: 0;
     top: 1030px;
     z-index: -1;
+}
+
+@media (max-width: 1100px) {
+    .line{
+        width:150px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .about-me-right{
+        display: none;
+    }
+
+    .about-me-frame{
+        justify-content: center;
+    }
+    
 }
