--- a/src/app/atf/atf.component.scss
+++ b/src/app/atf/atf.component.scss
@@ -10,8 +10,10 @@ color: white;
 margin-top: 32px;
 img{
     height: 60vh;
-    width: 45vw;
+    width: 30vw;
     margin-top: 24px;
+    margin-left: 48px;
+    z-index: -9;
 }
 
 .button-container{
@@ -46,6 +48,10 @@ h3{
     font-size: 42px;
     color: rgb(151, 71, 255);
 }
+}
+
+.topOfAtf{
+    display: flex;
 }
 
 .image-container{
@@ -94,10 +100,12 @@ left: 0;
 right: 0;
 width: 100%;
 height: 170px;
+z-index: 99;
     img{
         height: 24px;
         width: 24px;
         margin-left: 32px;
+        z-index: -99 !important;
         &:hover{
             cursor: pointer;
             transform: scale(1.2);
@@ -129,7 +137,7 @@ height: 170px;
     background: rgb(151, 71, 255);
 }
 
-.scrollDowm{
+.scrollDown{
     -webkit-transform: rotate(90deg);
     display: inline-block;
     margin-bottom: 75px;
@@ -137,20 +145,70 @@ height: 170px;
 
 .background-shape{
     position: absolute;
-    bottom: -470px;
-    z-index: -9;
+    bottom: -370px;
     width: 100%;
+    z-index: 1;
 }
 
 .photo-shadow{
     height: 500px;
     position: absolute;
     top: 200px;
-    z-index: -1;
+    z-index: -19;
 }
 
 .sjs-mail{
     text-decoration: none;
     color: white;
     margin-top: 115px;
+}
+
+@media (max-width: 1024px) {
+    .myself{
+            height: 40vh !important;
+            width: 30vw !important;
+        }
+
+    .topOfAtf{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .iAm-frame{
+        margin-top: 0;
+        margin-right: 0;
+        width: 95vw;
+        display: flex;
+        justify-content: center;
+        z-index: 99;
+    }
+
+    .background-shape{
+        bottom: -70px;
+    }
+
+    .photo-shadow{
+        height: 500px;
+        left: 110px;
+        top: 100px;
+        z-index: -99;
+    }
+
+    .scroll-down-container{
+        height: 200px;
+        margin-bottom: -100px;
+        white-space:nowrap;
+    }
+
+    .line{
+        width: 100px;
+    }
+
+    .icon-container{
+        margin-left: 0;
+    }
+
+    .email-address{
+        display: none;
+    }
 }
