--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-head" id="portfolio">
+<div class="portfolio-head">
     <div class="line-left"></div>
     <h1>Portfolio</h1>
     <div class="line-right"></div>
@@ -6,9 +6,9 @@
 <div class="sample">
     <span>This page is a sample of my work - please feel free to try them out.</span>
 </div>
-<div class="project-frame">
+<!-- <div class="project-frame">
     <div class="image-container">
-        <img src="/assets/img/join.png" alt="laptop showing join project">
+        <img class="project-image" src="/assets/img/join.png" alt="laptop showing join project">
     </div>
     <div class="project-container">
         <h3>Join</h3>
@@ -22,8 +22,8 @@
                     <button class="github">Github</button></a>
             </div>
     </div>
-</div>
-<div class="project-frame">
+</div> -->
+<!-- <div class="project-frame El-Pollo-loco">
     <div class="project-container">
         <h3>El Pollo Loco</h3>
         <h4>JavaScript | HTML | CSS</h4>
@@ -36,11 +36,11 @@
         </div>
     </div>
     <div class="image-container el-pollo-loco">
-        <img src="/assets/img/El_Pollo_Loco.png" alt="laptop showing El-Pollo-loco game">
+        <img class="project-image" src="/assets/img/El_Pollo_Loco.png" alt="laptop showing El-Pollo-loco game">
     </div>
-</div>
-<!-- <div>
-    <app-project *ngFor="let project of projects" [project]="project"></app-project>
 </div> -->
+<div>
+    <app-project *ngFor="let project of projects" [project]="project"></app-project>
+</div>
 <img class="purple-shadow2" src="/assets/img/purple-shadow.png" alt="shadow">
 <img class="green-shadow2" src="/assets/img/green-shadow2.png" alt="shadow">
