--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,8 +1,8 @@
 <div class="about-me-frame">
     <div class="about-me-left">
         <h1>About me</h1>
-        <div class="about-me-text">
-            <span>I am a German Web Developer with experience in building web apps with JavaScript & Angular. Welcome on
+        <div class="about-me-text-container">
+            <span class="about-me-text">I am a German Web Developer with experience in building web apps with JavaScript & Angular. Welcome on
                 my
                 public portfolio. I started my IT journey creating affiliate Websites using Wordpress. Occasionally I
                 had to
@@ -27,7 +27,7 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div> 
     <div class="about-me-right">
         <img src="/assets/img/ich2.png" alt="picture of myself">
         <div class="line"></div>
