--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -2,9 +2,11 @@
 
 </div>
 <div class="atf-frame">
-    <div class="topOfAtf">
+    <div class="topOfAtf" id="top-of-atf">
         <div class="image-container">
             <img class="myself" src="/assets/img/ich.png" alt="foto of myself">
+        </div>        
+        <div class="shadow-container">
             <img class="photo-shadow" src="/assets/img/photo-shadows.png" alt="shadow">
         </div>
         <div class="iAm-frame">
@@ -12,7 +14,7 @@
                 <div class="iAmDiv">
                     <span class="iAm">I am</span>
                 </div>
-                <div class="steffenFrontend">
+                <div class="steffenFrontend" >
                     <h1>Steffen Schanze</h1>
                     <h3>FRONTEND DEVELOPER</h3>
                     <a href="#contact">
@@ -26,11 +28,11 @@
         <div class="icon-container">
             <div class="line"></div>
             <a href="https://github.com/steffenjoachim/" target="_blank">
-                <img src="/assets/img/github-button.png" alt="Github button"></a>
+                <img class="icon-image" src="/assets/img/github-button.png" alt="Github button"></a>
             <a href="#contact">
-                <img src="/assets/img/mail-button.png" alt="Mail button"></a>
+                <img class="icon-image" src="/assets/img/mail-button.png" alt="Mail button"></a>
             <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
-                <img src="/assets/img/linkedin-button.png" alt="Linkedin button">
+                <img class="icon-image" src="/assets/img/linkedin-button.png" alt="Linkedin button">
             </a>
             <a href="#contact" class="sjs-mail">
                 <span class="email-address">steffenjoachim.schanze@gmail.com</span>
