--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,14 @@
 <div class="line"></div>
 <div class="footer-frame">
     <div class="logo-frame">
-        <img class="my-logo" src="/assets/img/sjs-logo.png" alt="my logo">
-        <a href="">Impressum</a>
+        <a class="logo-container" routerLink="/">
+            <img class="my-logo" src="/assets/img/sjs-logo.png" alt="my logo">
+        </a>
+        <a class="imprint-desktop" routerLink="imprint">Imprint</a>
     </div>
     <span>© Steffen Schanze 2023</span>
     <div class="icon-container">
-        <a href="https://github.com/steffenjoachim/" target="_blank">
+        <a class="github" href="https://github.com/steffenjoachim/" target="_blank">
             <img class="icon" src="/assets/img/github-button.png" alt="Github button"></a>
         <a href="mailto:steffenjoachim.schanze@gmail.com">
             <img class="icon" src="/assets/img/mail-button.png" alt="Mail button"></a>
@@ -14,4 +16,5 @@
             <img class="icon" src="/assets/img/linkedin-button.png" alt="Linkedin button">
         </a>
     </div>
+    <a class="imprint-mobile" routerLink="imprint">Imprint</a>
 </div>
