--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,3 +1,4 @@
+<div id="portfolio"></div>
 <div class="portfolio-head">
     <div class="line-left"></div>
     <h1>Portfolio</h1>
@@ -22,7 +23,7 @@
                     <button class="github">Github</button></a>
             </div>
     </div>
-</div> -->
+</div>   -->
 <!-- <div class="project-frame El-Pollo-loco">
     <div class="project-container">
         <h3>El Pollo Loco</h3>
@@ -38,7 +39,7 @@
     <div class="image-container el-pollo-loco">
         <img class="project-image" src="/assets/img/El_Pollo_Loco.png" alt="laptop showing El-Pollo-loco game">
     </div>
-</div> -->
+</div>  -->
 <div>
     <app-project *ngFor="let project of projects" [project]="project"></app-project>
 </div>
