--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -12,7 +12,9 @@ h1{
     margin-left: 48px;
 }
 
-.about-me-text{
+.about-me-text-container{
+    display: flex;
+    flex-direction: column;
     width: 450px;
     margin-left: 48px;
     text-align: justify;
@@ -40,6 +42,8 @@ h1{
         border: 2px solid #70E61C;
         border-radius: 100%;
         height: 300px;
+        width: 300px;
+        object-fit: contain;
     }
 }
 
@@ -47,6 +51,7 @@ h1{
     height: 2px;
     width: 250px;
     background: #70E61C;
+    z-index: 99;
 }
 
 .purple-shadow{
@@ -54,7 +59,41 @@ h1{
     height: 400px;
     right: 0;
     top: 1030px;
-    z-index: -1;
+    z-index: 1;
+}
+
+@media (min-width: 1600px) {
+
+    .about-me-text-container{
+        width: 750px;
+    }
+
+    .about-me-right{
+        img{
+            height: 400px !important;
+            width: 400px !important;
+        }
+    }
+}
+
+
+
+
+@media (min-width: 1400px) {
+    .line{
+        width: 300px !important;
+    }
+
+    .about-me-text-container{
+        width: 650px;
+    }
+
+    .about-me-right{
+        img{
+            height: 350px;
+            width: 350px;
+        }
+    }
 }
 
 @media (max-width: 1100px) {
@@ -63,13 +102,59 @@ h1{
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1024px) {
+    .about-me-frame{
+        margin-top: 300px;
+    }
+}
+
+@media (max-width: 990px) {
     .about-me-right{
+        display: none;
+    }
+
+    .purple-shadow{
         display: none;
     }
 
     .about-me-frame{
         justify-content: center;
+    } 
+
+    .about-me-left{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
     }
-    
+
+    .about-me-text-container{
+        width: 80%;
+    }
 }
+
+@media (max-width: 400px) {
+.about-me-text-container{
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+h1{
+    font-size: 40px;
+    margin-left: 48px;
+ }
+
+ .about-me-left{
+    align-items: flex-start;
+ }
+
+ .about-me-text{
+        margin-left: 36px;
+    }
+ }
+
+
+
+
+
+
+
