--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,38 +2,85 @@
     display: flex;
     margin-top: 120px;
 
-    input{
+    // input{
+    //     background: rgb(20, 29, 47);
+    //     border: 1px solid rgb(151, 71, 255);
+    //     border-radius: 5px;
+    //     padding: 12px;
+    //     margin-bottom: 16px;
+    //     width: 400px;
+    //     &::placeholder{
+    //         color: white;
+    //     }
+    //     &:hover{
+    //         border: 1px solid rgb(112, 230, 28);
+    //         cursor: pointer;
+    //     }
+    // }
+
+    // textarea{
+    //     background: rgb(20, 29, 47);
+    //     border: 1px solid rgb(151, 71, 255);
+    //     border-radius: 5px;
+    //     padding: 12px;
+    //     width: 400px;
+    //     color: white;
+    //     &::placeholder{
+    //         color: white;
+    //     }
+    //     &:hover{
+    //         border: 1px solid rgb(112, 230, 28);
+    //         cursor: pointer;
+    //     }
+    // }
+
+    .green {
+        outline: 1px solid rgb(112, 230, 28) !important;
+        border: none !important;
+      }
+
+      .red {
+        outline: 1px solid rgb(230, 28, 64) !important;
+        border: none !important;
+      }
+
+    input, textarea {
         background: rgb(20, 29, 47);
         border: 1px solid rgb(151, 71, 255);
         border-radius: 5px;
         padding: 12px;
         margin-bottom: 16px;
         width: 400px;
-        &::placeholder{
-            color: white;
-        }
-        &:hover{
-            border: 1px solid rgb(112, 230, 28);
-            cursor: pointer;
-        }
-    }
-
-    textarea{
-        background: rgb(20, 29, 47);
-        border: 1px solid rgb(151, 71, 255);
-        border-radius: 5px;
-        padding: 12px;
-        width: 400px;
         color: white;
-        &::placeholder{
-            color: white;
+        &::placeholder {
+          color: white;
         }
-        &:hover{
-            border: 1px solid rgb(112, 230, 28);
-            cursor: pointer;
+    
+        // &:focus {
+        //   outline:  1px solid rgb(230, 28, 64);
+        //   &:hover{
+        //     border: none !important;
+        //   }
+        // }
+    
+        &:green {
+          outline: 1px solid rgb(112, 230, 28) !important;
+          border: none !important;
         }
-    }
-
+      }
+    
+      // Style für leere Inputfelder und Textareas
+      input.empty, textarea.empty {
+        border-color: rgb(151, 71, 255);
+        background: rgb(20, 29, 47);
+      }
+    
+      // Ändere den Style beim Hover für die Inputfelder und Textareas
+      input:hover, textarea:hover {
+        border-color: rgb(112, 230, 28);
+        cursor: pointer;
+      }
+    
     button{
         background: rgb(112, 230, 28);
         height: 56px;
@@ -75,6 +122,24 @@ h1{
     margin-left: 48px;
 }
 
+.name-required, .email-required, .message-required{
+    color: rgb(230, 28, 64);
+    font-size: 12px;
+    margin-top: -12px;
+    margin-bottom: 16px;
+}
+
+.input-container{
+    display: flex;
+}
+
+.attention{
+    margin-top: 12px;
+    margin-left: -28px;
+    height: 18px;
+    width: 18px;
+}
+
 .contact-form{
     display: flex;
     flex-direction: column;
@@ -93,20 +158,77 @@ h1{
     margin-top: 96px;
     position: absolute;
     right: 48px;
-    
-    
 }
 
 .bottom-div{
     width: 100%;
     height: 200px;
+    position: relative;
+}
+
+.sucess-message{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgb(20, 29, 47);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sucess-text-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    width: 70vw;
+    background: whitesmoke;
+    color: rgb(151, 71, 255);
+    font-size: 64px;
+    font-weight: 900;
+    border-radius: 20px;
+}
+
+.sucess-text{
+    margin-left: 32px;
+}
+
+.continue{
+    margin-top: 96px;
+    font-size: 16px;
+    color: rgb(112, 230, 28);
+}
+
+.d-none-i{
+    display: none !important;
 }
 
 .purple-shadow4{
     position: absolute;
     height: 500px;
     z-index: -1;
-    top: 3300px;
+    bottom: 0;
+}
+
+@media (min-width: 1400px){
+
+    .contact-frame{
+        input, textarea {
+            padding: 18px;
+            margin-bottom: 16px;
+            width: 600px;
+            &::placeholder {
+              font-size: 20px;
+            }
+        }
+    }
+
+    .line{
+        width: 2%;
+    }
 }
 
 @media (max-width: 830px) {
@@ -136,4 +258,55 @@ h1{
     margin-top: 48px;
 }
 
+.sucess-text-container{
+    font-size: 36px;
+    height: 60vh;
+    width: 60vw;
+}
+
+.sucess-text{
+    margin-left: 24px;
+}
+
+.continue{
+    margin-top: 76px;
+}
+}
+
+@media (max-width: 500px){
+    .purple-shadow4{
+        height: 300px;
+    }
+
+    .sucess-text-container{
+        font-size: 24px;
+    }
+    
+    .sucess-text{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+    
+    .continue{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .contact-frame{
+
+        input{
+            width: 265px;
+        }
+
+        textarea{
+            width: 265px;
+        }
+
+        button{
+            margin-left: 20px;
+        }
+    }
 }
