--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,7 +42,11 @@
 
 .my-logo{
     height: 15vh;
-    margin-left: 48px;
+    margin-left: 100px;
+}
+
+.link-container{
+    margin-right: 96px;
 }
 
 .burger{
@@ -58,13 +62,13 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba($color: #000000, $alpha: 0.4);
+    background: rgba($color: #000000, $alpha: 0.8);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     a{
-        font-size: 24px;
+        font-size: 36px;
         font-weight: 900;
     }
 }
@@ -77,5 +81,12 @@
 
     .burger{
         display: block;
+    }
+}
+
+@media (max-width: 680px) {
+
+    .my-logo{
+        margin-left: 32px;
     }
 }
