--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -41,6 +41,9 @@
             <span class="md">Material Design</span>
         </div>
     </div>
+    <div class="green-shadow-container">
+        <img class="green-shadow" src="/assets/img/green-shadow2.png" alt="shadow">
+    </div>
     <div class="my-skills-container">
         <div class="my-skills-head">
             <h1>My skills</h1>
@@ -51,8 +54,8 @@
             technologies you find listed alongside.
         </span>
         <a href="#contact">
-            <button id="portfolio">Get in touch</button>
+            <button>Get in touch</button>
         </a>
     </div>
 </div>
-<img class="green-shadow" src="/assets/img/green-shadow2.png" alt="shadow">
+
