--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,8 +1,13 @@
+#portfolio{
+    width: 100%;
+    height: 180px;
+}
+
 .portfolio-head{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 48px;
+    // margin-top: 48px;
 }
 
 h1{
@@ -19,7 +24,7 @@ h1{
 
 .line-right{
     height: 2px;
-    min-width: 30%;
+    width: 30%;
     background: rgb(151, 71, 255); 
     position: absolute;
     right: 0;
@@ -112,6 +117,13 @@ h1{
 }
 
 @media (max-width: 1070px) {
+
+    .project-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .project-frame{
         flex-direction: column-reverse;
     }
@@ -124,10 +136,52 @@ h1{
         display: flex;
         justify-content: center;
     }
+
+    .line-right{
+        width: 23%;
+    }
 }
 
-@media (max-width: 1070px) {
+@media (max-width: 768px) {
     .project-image{
-        width: 500px;
+        width: 400px;
+    }
+
+    .line-left{
+        width: 100px;
+    }
+
+    .line-right{
+        width: 20%;
+    }
+}
+
+@media (max-width: 600px) {
+    .line-left{
+        width: 80px;
+    }
+
+    .line-right{
+        width: 15%;
+    }
+}
+
+@media (max-width: 500px) {
+    .line-left{
+        width: 60px;
+    }
+
+    .line-right{
+        width: 10%;
+    }
+}
+
+@media (max-width: 400px) {
+    .line-left{
+        width: 40px;
+    }
+
+    .line-right{
+        width: 5%;
     }
 }
